--- a/AAP_C1_Function_Calling_with_OpenAI.ipynb
+++ b/AAP_C1_Function_Calling_with_OpenAI.ipynb
@@ -16,36 +16,29 @@
         "id": "1qm8x2zhhd-8"
       },
       "source": [
-        "# Integrating tools/function with LLM using Azure OpenAI"
+        "# Integrating tools/function with LLM using OpenAI"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xu6uxcLphsRz",
-        "outputId": "dcee60be-8dfc-4600-e9e7-a89b5f7b163d"
+        "outputId": "94cef08d-8d7c-47f8-fb70-a9044cf643f6"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -rotobuf (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n",
-            "WARNING: Ignoring invalid distribution -ensorflow-intel (c:\\users\\anshu pandey\\appdata\\roaming\\python\\python310\\site-packages)\n"
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m328.5/328.5 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
           ]
         }
       ],
@@ -55,19 +48,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "GTT0Jc-qhVby"
       },
       "outputs": [],
       "source": [
         "# Define constants for the Azure OpenAI API configuration\n",
-        "api_key = \"xxxxxxxxxxxxxx\""
+        "api_key = \"sk-proj-xxxxxxxxxxxxxxxxxxxx\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "PLKRALkuhVby"
       },
@@ -78,7 +71,7 @@
         "import json\n",
         "import requests\n",
         "\n",
-        "client = AzureOpenAI(api_key=api_key)\n",
+        "client = OpenAI(api_key=api_key)\n",
         "model_name = \"gpt-3.5-turbo\""
       ]
     },
@@ -105,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "FUAVQTH1FCob"
       },
@@ -149,25 +142,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "zvpewsATGB30",
-        "outputId": "01d29cea-3467-4fc5-b124-8f38b473468f"
+        "outputId": "6a05fd0f-f4d4-43f9-f0e3-f3b29d98dc5b"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'{\"location\": \"Paris\", \"temperature\": 290.43, \"unit\": \"Kelvin\", \"forecast\": [\"Rain\", \"light rain\"]}'"
-            ]
+              "'{\"location\": \"Paris\", \"temperature\": 291.17, \"unit\": \"Kelvin\", \"forecast\": [\"Clear\", \"clear sky\"]}'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 6,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ],
       "source": [
@@ -176,25 +172,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
         "id": "sTPInk2CiVpV",
-        "outputId": "bbd31641-53d2-4f91-d578-9d5ec50c4e03"
+        "outputId": "b62bbfa7-c88f-4bca-ba43-75e4cd4fff9d"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'{\"location\": \"Manila\", \"temperature\": 304.47, \"unit\": \"Kelvin\", \"forecast\": [\"Clouds\", \"overcast clouds\"]}'"
-            ]
+              "'{\"location\": \"Manila\", \"temperature\": 302.12, \"unit\": \"Kelvin\", \"forecast\": [\"Rain\", \"light rain\"]}'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
           },
-          "execution_count": 7,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
@@ -203,84 +202,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6OLj1VFabUCR",
-        "outputId": "cb038e0a-fc95-4c8f-9f14-f783a84f494e"
+        "outputId": "2273a170-ef0c-4751-b652-fb1ec82da889"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "{\n",
-            "  \"id\": \"chatcmpl-9bNSMJQblXNxi55gX0f1pLPk5l7h3\",\n",
+            "  \"id\": \"chatcmpl-9jdO58mgJUIxSu9Pjsx89ohncVUxi\",\n",
             "  \"choices\": [\n",
             "    {\n",
             "      \"finish_reason\": \"stop\",\n",
             "      \"index\": 0,\n",
             "      \"logprobs\": null,\n",
             "      \"message\": {\n",
-            "        \"content\": \"AI stands for Artificial Intelligence. It refers to the simulation of human intelligence in machines that are programmed to perform tasks that would normally require human intelligence, such as visual perception, speech recognition, problem-solving, learning, and decision-making. AI enables machines to process and analyze large amounts of data, identify patterns, and make autonomous decisions or predictions. It utilizes various techniques like machine learning, neural networks, natural language processing, and computer vision to mimic human intelligence.\",\n",
+            "        \"content\": \"AI, or artificial intelligence, refers to the simulation of human intelligence processes by machines, typically computer systems. This includes processes such as learning, reasoning, problem-solving, perception, and language understanding. AI technologies can be used in a wide range of applications, from virtual assistants like Siri and Alexa to self-driving cars and predictive analytics.\",\n",
             "        \"role\": \"assistant\",\n",
             "        \"function_call\": null,\n",
             "        \"tool_calls\": null\n",
-            "      },\n",
-            "      \"content_filter_results\": {\n",
-            "        \"hate\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"self_harm\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"sexual\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"violence\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        }\n",
             "      }\n",
             "    }\n",
             "  ],\n",
-            "  \"created\": 1718695330,\n",
-            "  \"model\": \"gpt-35-turbo\",\n",
+            "  \"created\": 1720663193,\n",
+            "  \"model\": \"gpt-3.5-turbo-0125\",\n",
             "  \"object\": \"chat.completion\",\n",
+            "  \"service_tier\": null,\n",
             "  \"system_fingerprint\": null,\n",
             "  \"usage\": {\n",
-            "    \"completion_tokens\": 91,\n",
+            "    \"completion_tokens\": 66,\n",
             "    \"prompt_tokens\": 11,\n",
-            "    \"total_tokens\": 102\n",
-            "  },\n",
-            "  \"prompt_filter_results\": [\n",
-            "    {\n",
-            "      \"prompt_index\": 0,\n",
-            "      \"content_filter_results\": {\n",
-            "        \"hate\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"self_harm\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"sexual\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"violence\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        }\n",
-            "      }\n",
-            "    }\n",
-            "  ]\n",
+            "    \"total_tokens\": 77\n",
+            "  }\n",
             "}\n"
           ]
         }
@@ -293,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "l316C1xAb-Qy"
       },
@@ -320,12 +279,13 @@
         "                },\n",
         "            },\n",
         "        },\n",
+        "\n",
         "    ]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "9gdvGUJGbheA"
       },
@@ -398,86 +358,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FWL0wVqFdeBm",
-        "outputId": "af1791a3-7e05-4527-e75e-9caefe8bd685"
+        "outputId": "fcbd0ba8-8baf-4b71-8c01-08970406d9a3"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "{\n",
-            "  \"id\": \"chatcmpl-9bNr00U46cFQDLker3zxluTwSIvHf\",\n",
-            "  \"choices\": [\n",
-            "    {\n",
-            "      \"finish_reason\": \"stop\",\n",
-            "      \"index\": 0,\n",
-            "      \"logprobs\": null,\n",
-            "      \"message\": {\n",
-            "        \"content\": \"AI, or Artificial Intelligence, refers to the simulation of human intelligence in machines that are programmed to think and learn like humans. It involves the development of computer systems that can perform tasks that would typically require human intelligence, such as speech recognition, problem-solving, and decision-making.\",\n",
-            "        \"role\": \"assistant\",\n",
-            "        \"function_call\": null,\n",
-            "        \"tool_calls\": null\n",
-            "      },\n",
-            "      \"content_filter_results\": {\n",
-            "        \"hate\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"self_harm\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"sexual\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"violence\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        }\n",
-            "      }\n",
-            "    }\n",
-            "  ],\n",
-            "  \"created\": 1718696858,\n",
-            "  \"model\": \"gpt-35-turbo\",\n",
-            "  \"object\": \"chat.completion\",\n",
-            "  \"system_fingerprint\": null,\n",
-            "  \"usage\": {\n",
-            "    \"completion_tokens\": 56,\n",
-            "    \"prompt_tokens\": 87,\n",
-            "    \"total_tokens\": 143\n",
-            "  },\n",
-            "  \"prompt_filter_results\": [\n",
-            "    {\n",
-            "      \"prompt_index\": 0,\n",
-            "      \"content_filter_results\": {\n",
-            "        \"hate\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"self_harm\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"sexual\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"violence\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        }\n",
-            "      }\n",
-            "    }\n",
-            "  ]\n",
-            "}\n",
-            "AI, or Artificial Intelligence, refers to the simulation of human intelligence in machines that are programmed to think and learn like humans. It involves the development of computer systems that can perform tasks that would typically require human intelligence, such as speech recognition, problem-solving, and decision-making.\n"
+            "AI, or Artificial Intelligence, is the simulation of human intelligence processes by machines, especially computer systems. It involves the development of algorithms that enable machines to perform tasks that typically require human intelligence.\n"
           ]
         }
       ],
@@ -490,80 +384,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h0H4DaivdmPW",
-        "outputId": "67d2c2f0-8be3-41c2-aee4-7f115fadf366"
+        "outputId": "45d28159-4931-4f7c-b2ed-cf5131ef2261"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "{\n",
-            "  \"id\": \"chatcmpl-9bNrC4vy2ReOwPc1QPfNQh6sChtRb\",\n",
-            "  \"choices\": [\n",
-            "    {\n",
-            "      \"finish_reason\": \"tool_calls\",\n",
-            "      \"index\": 0,\n",
-            "      \"logprobs\": null,\n",
-            "      \"message\": {\n",
-            "        \"content\": null,\n",
-            "        \"role\": \"assistant\",\n",
-            "        \"function_call\": null,\n",
-            "        \"tool_calls\": [\n",
-            "          {\n",
-            "            \"id\": \"call_FfE6kse2GSyJL63Fqb9nWR0Z\",\n",
-            "            \"function\": {\n",
-            "              \"arguments\": \"{\\n  \\\"location\\\": \\\"Tokyo\\\"\\n}\",\n",
-            "              \"name\": \"get_current_weather\"\n",
-            "            },\n",
-            "            \"type\": \"function\"\n",
-            "          }\n",
-            "        ]\n",
-            "      },\n",
-            "      \"content_filter_results\": {}\n",
-            "    }\n",
-            "  ],\n",
-            "  \"created\": 1718696870,\n",
-            "  \"model\": \"gpt-35-turbo\",\n",
-            "  \"object\": \"chat.completion\",\n",
-            "  \"system_fingerprint\": null,\n",
-            "  \"usage\": {\n",
-            "    \"completion_tokens\": 17,\n",
-            "    \"prompt_tokens\": 87,\n",
-            "    \"total_tokens\": 104\n",
-            "  },\n",
-            "  \"prompt_filter_results\": [\n",
-            "    {\n",
-            "      \"prompt_index\": 0,\n",
-            "      \"content_filter_results\": {\n",
-            "        \"hate\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"self_harm\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"sexual\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        },\n",
-            "        \"violence\": {\n",
-            "          \"filtered\": false,\n",
-            "          \"severity\": \"safe\"\n",
-            "        }\n",
-            "      }\n",
-            "    }\n",
-            "  ]\n",
-            "}\n",
             "Making a function call\n",
-            "[ChatCompletionMessageToolCall(id='call_FfE6kse2GSyJL63Fqb9nWR0Z', function=Function(arguments='{\\n  \"location\": \"Tokyo\"\\n}', name='get_current_weather'), type='function')]\n",
-            "The weather in Tokyo today is rainy with showers. The temperature is around 291.81 Kelvin.\n"
+            "[ChatCompletionMessageToolCall(id='call_5YlkdEcRaGJVviUkcnz9VadL', function=Function(arguments='{\"location\":\"Tokyo\",\"unit\":\"celsius\"}', name='get_current_weather'), type='function')]\n",
+            "The weather in Tokyo today is mostly cloudy with broken clouds, and the temperature is around 30.91°C.\n"
           ]
         }
       ],
@@ -572,6 +408,15 @@
         "response = get_response(messages, tools)\n",
         "print(response.choices[0].message.content)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "iaZlvyyQk8SW"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
