--- a/AAP_C3_gemini_parallel_function_calling.ipynb
+++ b/AAP_C3_gemini_parallel_function_calling.ipynb
@@ -71,11 +71,82 @@
       "execution_count": null,
       "metadata": {
         "id": "tFy3H3aPgx12",
-        "tags": []
+        "tags": [],
+        "outputId": "5a4509dc-bf24-431c-ae54-a9cc5edbe035",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m11.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for wikipedia (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[33m  WARNING: The script tb-gcp-uploader is installed in '/root/.local/bin' which is not on PATH.\n",
+            "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\u001b[33m\n",
+            "\u001b[0m"
+          ]
+        }
+      ],
       "source": [
         "!pip3 install --upgrade --user --quiet google-cloud-aiplatform wikipedia"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "R5Xep4W9lq-Z"
+      },
+      "source": [
+        "### Restart current runtime\n",
+        "\n",
+        "To use the newly installed packages in this Jupyter runtime, you must restart the runtime. You can do this by running the cell below, which will restart the current kernel."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XRvKdaPDTznN",
+        "tags": [],
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "54e5f1bc-11ae-4d94-d9e4-c82c3ed293a0"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'status': 'ok', 'restart': True}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
+      "source": [
+        "# Restart kernel after installs so that your environment can access the new packages\n",
+        "import IPython\n",
+        "\n",
+        "app = IPython.Application.instance()\n",
+        "app.kernel.do_shutdown(True)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SbmM4z7FOBpM"
+      },
+      "source": [
+        "<div class=\"alert alert-block alert-warning\">\n",
+        "<b>⚠️ The kernel is going to restart. Please wait until it is finished before continuing to the next step. ⚠️</b>\n",
+        "</div>\n",
+        "\n"
       ]
     },
     {
@@ -316,10 +387,14 @@
       "execution_count": null,
       "metadata": {
         "id": "BkO5UJSIjvYh",
-        "outputId": "46fd22da-8002-42fc-a32e-ffaabb67e1c7"
+        "outputId": "0328bf98-63a7-4f86-88a9-076cabbd7163",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[{'search_wikipedia': {'query': 'Solar panels'}},\n",
@@ -327,9 +402,8 @@
               " {'search_wikipedia': {'query': 'Battery storage'}}]"
             ]
           },
-          "execution_count": 10,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 8
         }
       ],
       "source": [
@@ -355,12 +429,15 @@
       "execution_count": null,
       "metadata": {
         "id": "3fSBTa0QjvYj",
-        "outputId": "162bf1f8-a613-46cf-88c5-399ec43028d9"
+        "outputId": "3d896f5a-8088-45c8-f3ad-d28aa4c37556",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "{'search_wikipedia': {'query': 'Solar panels'}}\n",
             "{'search_wikipedia': {'query': 'Renewable energy'}}\n",
@@ -399,36 +476,39 @@
       "metadata": {
         "scrolled": true,
         "id": "SXlwZ2BRjvYk",
-        "outputId": "ba30f0fc-bdf7-44ba-9d31-1ac6196c217b"
+        "outputId": "113057c2-68b5-4d9c-9ed5-e7a8efaa7166",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        }
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
-            "text/markdown": [
-              "Solar panels are devices that convert sunlight into electricity using photovoltaic cells. They are arranged in arrays and systems, often found in solar farms or on rooftops. Solar panels offer a renewable and clean energy source, reducing greenhouse gas emissions and lowering electricity bills. However, they depend on sunlight availability, require cleaning, and have high initial costs.\n",
-              "\n",
-              "Renewable energy encompasses sources like solar, wind, hydro, bioenergy, and geothermal, replenished on a human timescale. These sources contribute to climate change mitigation, energy security, and economic benefits. Renewable energy systems are becoming more efficient and affordable, leading to increased global adoption. However, challenges include fossil fuel subsidies and debates surrounding geopolitics, material extraction, and sustainability.\n",
-              "\n",
-              "Battery storage power stations utilize batteries to store electrical energy, providing rapid response to grid stabilization needs. They offer short-term peak power and ancillary services, minimizing power outages. While their capacity is currently smaller than pumped-storage hydropower, battery storage is rapidly growing due to its cost-effectiveness and flexibility. Advancements in battery technology continue to drive down costs and increase storage capacity. \n"
-            ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
-            ]
+            ],
+            "text/markdown": "Solar panels convert sunlight into electricity using photovoltaic cells, offering a renewable and clean energy source that can reduce greenhouse gas emissions and lower electricity bills. However, they depend on sunlight availability, require cleaning, and have high initial costs. \n\nRenewable energy, including solar, wind, and hydropower, is replenished naturally and has become increasingly efficient and cheaper. It's vital for combating climate change by reducing greenhouse gas emissions compared to fossil fuels. While facing obstacles like fossil fuel subsidies and land use concerns, the transition to renewables is crucial for a sustainable future.\n\nBattery storage power stations are essential for stabilizing electric grids by storing energy from sources like solar and wind power. They provide rapid response to grid fluctuations, ensuring reliability. While their capacity is smaller than pumped-storage hydropower, battery storage is rapidly growing and becoming more cost-effective, making it a key player in the transition to a cleaner and more resilient energy system. \n"
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ],
       "source": [
         "# Return the API response to Gemini\n",
-        "response = chat.send_message(\n",
-        "    Part.from_function_response(\n",
-        "        name=\"search_wikipedia\",\n",
-        "        response={\n",
-        "            \"content\": api_response,\n",
-        "        },\n",
-        "    ),\n",
-        ")\n",
+        "\n",
+        "function_responses = []\n",
+        "for i in range(len(function_calls)):\n",
+        "    function_responses.append(\n",
+        "        Part.from_function_response(\n",
+        "            name=\"search_wikipedia\",\n",
+        "            response={\n",
+        "                \"content\": api_response[i],\n",
+        "            },\n",
+        "        )\n",
+        "    )\n",
+        "\n",
+        "response = chat.send_message(function_responses)\n",
         "display(Markdown(response.text))"
       ]
     },
@@ -589,20 +669,23 @@
       "execution_count": null,
       "metadata": {
         "id": "pT_ZDNjXjvYo",
-        "outputId": "94308ed0-a133-415e-96e0-636dc6b728b5"
+        "outputId": "2f1a6336-a604-43ba-cb56-e68b4fb37535",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[{'search_wikipedia': {'query': 'Solar System'}},\n",
-              " {'suggest_wikipedia': {'query': 'Solar System'}},\n",
-              " {'summarize_wikipedia': {'topic': 'Solar System'}}]"
+              "[{'search_wikipedia': {'query': 'solar system'}},\n",
+              " {'suggest_wikipedia': {'query': 'solar system'}},\n",
+              " {'summarize_wikipedia': {'topic': 'solar system'}}]"
             ]
           },
-          "execution_count": 16,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 15
         }
       ],
       "source": [
@@ -626,16 +709,19 @@
       "execution_count": null,
       "metadata": {
         "id": "MrnQf3RcjvYz",
-        "outputId": "72914596-9482-4bc6-fb39-decb1087986e"
+        "outputId": "3e7397fe-1f08-4265-aa9e-e7fd8b78aa96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "{'search_wikipedia': {'query': 'Solar System'}}\n",
-            "{'suggest_wikipedia': {'query': 'Solar System'}}\n",
-            "{'summarize_wikipedia': {'topic': 'Solar System'}}\n"
+            "{'search_wikipedia': {'query': 'solar system'}}\n",
+            "{'suggest_wikipedia': {'query': 'solar system'}}\n",
+            "{'summarize_wikipedia': {'topic': 'solar system'}}\n"
           ]
         }
       ],
@@ -680,50 +766,38 @@
       "metadata": {
         "scrolled": true,
         "id": "EuaPVjGLjvYz",
-        "outputId": "e4ca5550-eff8-4533-9d29-f318e3ec4abe"
+        "outputId": "4ccf8dcc-382a-4193-95d4-987e8c8d5498",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 203
+        }
       },
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
-            "text/markdown": [
-              "I found the following Wikipedia information on the Solar System:\n",
-              "\n",
-              "Search results: \n",
-              "- Solar System\n",
-              "- Formation and evolution of the Solar System\n",
-              "- List of Solar System objects by size\n",
-              "- List of Solar System objects\n",
-              "- Solar System belts\n",
-              "- Solar wind\n",
-              "- Solar System (disambiguation)\n",
-              "- Passive solar building design\n",
-              "- Photovoltaic system\n",
-              "- Solar System model\n",
-              "\n",
-              "Variations: \n",
-              "- soler system\n",
-              "\n",
-              "Summary: \n",
-              "The Solar System is the gravitationally bound system of the Sun and the objects that orbit it. It was formed 4.6 billion years ago. The Sun is an ordinary main sequence star. The largest objects that orbit the Sun are the eight planets: Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune.  There is a strong consensus among astronomers that the Solar System has at least eight dwarf planets: Ceres, Pluto, Haumea, Quaoar, Makemake, Gonggong, Eris, and Sedna. There are also a vast number of small Solar System bodies, such as asteroids, comets, centaurs, meteoroids, and interplanetary dust clouds. \n"
-            ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
-            ]
+            ],
+            "text/markdown": "Here's some information about the Solar System:\n\nSearch results: \"Solar System\", \"Formation and evolution of the Solar System\", \"Photovoltaic system\", \"Solar System (disambiguation)\", \"List of Solar System objects by size\", \"Small Solar System body\", \"List of Solar System objects\", \"Solar System belts\", \"Passive solar building design\", \"List of natural satellites\"\n\nVariations: \"soler system\"\n\nSummary: The Solar System, formed around 4.6 billion years ago, consists of the Sun and objects orbiting it. The Sun, a G-type main-sequence star, generates energy through hydrogen fusion. Eight planets orbit the Sun: Mercury, Venus, Earth, Mars (terrestrial planets), Jupiter, Saturn (gas giants), Uranus, and Neptune (ice giants). The Solar System also contains dwarf planets (Ceres, Pluto, Eris, etc.), asteroids, comets, and more.  The Sun's influence, the solar wind, extends far beyond the planets, forming the heliosphere. The Oort cloud, a distant region, marks the Solar System's edge. Proxima Centauri, the nearest star, lies 4.25 light-years away. \n"
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ],
       "source": [
         "# Return the API response to Gemini\n",
-        "response = chat.send_message(\n",
-        "    Part.from_function_response(\n",
-        "        name=\"search_wikipedia\",\n",
-        "        response={\n",
-        "            \"content\": api_response,\n",
-        "        },\n",
-        "    ),\n",
-        ")\n",
+        "function_response = []\n",
+        "for function_name in api_response:\n",
+        "    function_response.append(\n",
+        "        Part.from_function_response(\n",
+        "            name=function_name,\n",
+        "            response={\n",
+        "                \"content\": api_response[function_name],\n",
+        "            },\n",
+        "        )\n",
+        "    )\n",
+        "\n",
+        "response = chat.send_message(function_response)\n",
         "\n",
         "display(Markdown(response.text))"
       ]
@@ -743,7 +817,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "environment": {
